--- a/package.json
+++ b/package.json
@@ -11,22 +11,38 @@
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
     "@clerk/themes": "^1.7.5",
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "@hookform/resolvers": "^3.3.0",
+    "@radix-ui/react-context-menu": "^2.1.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@types/node": "20.5.0",
+    "@react-google-maps/api": "^2.19.2",
+    "@types/node": "^20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "lucide-react": "^0.268.0",
+    "mongodb": "^5.8.0",
+    "mongoose": "^7.4.4",
     "next": "13.4.16",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
