--- a/package.json
+++ b/package.json
@@ -32,19 +32,23 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "lucide-react": "^0.268.0",
+    "luxon": "^3.4.1",
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.4",
     "next": "13.4.16",
     "react": "18.2.0",
+    "react-aria": "^3.27.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-stately": "^3.25.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/luxon": "^3.3.1",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
