--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/luxon": "^3.3.1",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.27",
+    "prisma": "^5.2.0",
     "tailwindcss": "^3.3.3"
   }
 }
