--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@googlemaps/js-api-loader": "^1.16.2",
     "@hookform/resolvers": "^3.3.0",
     "@prisma/client": "^5.2.0",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.4",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
