--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@types/luxon": "^3.3.1",
     "autoprefixer": "^10.4.15",
+    "encoding": "^0.1.13",
     "postcss": "^8.4.27",
     "prisma": "^5.2.0",
     "tailwindcss": "^3.3.3"
