--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.54.1",
     "@types/luxon": "^3.3.1",
     "autoprefixer": "^10.4.15",
     "encoding": "^0.1.13",
