--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "localtunnel": "^2.0.2",
     "lucide-react": "^0.268.0",
     "luxon": "^3.4.1",
     "mongodb": "^5.8.0",
