--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/themes": "^1.7.5",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@hookform/resolvers": "^3.3.0",
+    "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.2.0",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.4",
@@ -27,6 +28,7 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-google-maps/api": "^2.19.2",
     "@types/node": "^20.5.0",
     "@types/react": "18.2.20",
@@ -37,6 +39,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "framer-motion": "^10.16.4",
     "localtunnel": "^2.0.2",
     "lucide-react": "^0.268.0",
     "luxon": "^3.4.1",
@@ -62,7 +65,7 @@
     "autoprefixer": "^10.4.15",
     "encoding": "^0.1.13",
     "postcss": "^8.4.27",
-    "prisma": "^5.2.0",
+    "prisma": "^5.3.1",
     "tailwindcss": "^3.3.3"
   }
 }
