--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.23.2",
+    "@clerk/nextjs": "^4.29.1",
     "@clerk/themes": "^1.7.5",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@hookform/resolvers": "^3.3.0",
@@ -40,18 +40,20 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "framer-motion": "^10.16.4",
-    "localtunnel": "^2.0.2",
+    "localtunnel": "^1.8.3",
     "lucide-react": "^0.268.0",
     "luxon": "^3.4.1",
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.4",
-    "next": "13.4.16",
+    "next": "^14.0.4",
     "ngrok": "^5.0.0-beta.2",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
     "react-aria": "^3.27.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-stately": "^3.25.0",
     "svix": "^1.11.0",
     "tailwind-merge": "^1.14.0",
