--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.3.1",
     "react-stately": "^3.25.0",
     "svix": "^1.11.0",
     "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
     "zod": "^3.22.2"
